--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hehujun's home page</title>
-</head>
-<body>
-    hello world
-</body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/web/favicon.ico"><link href="https://cdn.bootcdn.net/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"><link rel="stylesheet" href="https://cdn.staticfile.org/element-ui/2.15.1/theme-chalk/index.min.css"><link rel="stylesheet" href="https://5ihejin.cn/web/theme/index.css"><title>吾爱河津</title><meta name="keywords" content="河津，河津市，hejin，hj，合金，电影，电视，综艺，动漫，最新电影，在线电影，在线影院，影视，影院"><meta name="description" content="吾爱河津-为您免费提供最新在线电影、综艺节目、动漫影片、电视剧等内容；如果您喜欢本站，请记得收藏本站。本站视频播放清晰流畅，操作界面简单友好，真正为用户带来“悦享品质”的在线观看体验。电影,电影网,最新电影,高清电影,免费电影,在线电影"><script>var _hmt = _hmt || [];
+      (function() {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?7f5f4282b8254097872d30f4824fe7fa";
+          var s = document.getElementsByTagName("script")[0];
+          s.parentNode.insertBefore(hm, s);
+      })();</script><link href="/web/css/about.64f1b7d7.css" rel="prefetch"><link href="/web/js/about.459d1ef4.js" rel="prefetch"><link href="/web/css/app.dcaf0720.css" rel="preload" as="style"><link href="/web/js/app.1b0138cc.js" rel="preload" as="script"><link href="/web/js/chunk-vendors.dd2df86f.js" rel="preload" as="script"><link href="/web/css/app.dcaf0720.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but xmovie-web-pc-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.min.js"></script><script src="https://cdn.staticfile.org/vue-router/3.1.6/vue-router.min.js"></script><script src="https://cdn.staticfile.org/vuex/3.1.3/vuex.min.js"></script><script src="https://cdn.staticfile.org/axios/0.19.2/axios.min.js"></script><script src="https://cdn.staticfile.org/element-ui/2.15.1/index.min.js"></script><script src="https://cdn.jsdelivr.net/npm/xgplayer@2.18.2/browser/index.js"></script><script src="https://cdn.jsdelivr.net/npm/xgplayer-hls.js@2.4.2/browser/index.js"></script><script src="https://cdn.staticfile.org/crypto-js/4.0.0/crypto-js.min.js"></script><script src="/web/js/chunk-vendors.dd2df86f.js"></script><script src="/web/js/app.1b0138cc.js"></script></body></html>
